        - korapxml2conllu: use morpho.xml if present when run on base zips
        - korapxml2conllu: new option -c <columns>

0.4.1 2021-07-31
        - korapxml2conllu: fix patterns not extracted for last texts in archive

0.4 2021-07-29
        - korapxml2conllu option -e <regex> added to extract element/attributes to comments

0.3 2021-02-15
        - Provide conllu2korapxml to convert from ConLL-U to KorAP-XML zip

0.2 2021-02-12
        - Convert also KorAP-XML base zips

0.1 2020-09-23
        - Initial release to GitHub.